2006-10-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-buffer): New function.

2006-09-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-mail-user-agents): Add vm-user-agent.

	* w3m-mail.el (w3m-mail-user-agent-compose-function-alist): Add
	vm-user-agent.
	(w3m-mail-compose-with-vm): New function.
	(w3m-mail-goto-body-and-clear-body): New function.
	(w3m-mail-position-point): New function.
	(w3m-mail-compose-with-mml, w3m-mail-compose-with-semi): Use them.

2006-09-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (w3m-mail-compose-with-mew): Handle coding-system and
	charset accurately. When call with `current-prefix-arg', try to
	use existing draft buffer.

	* w3m-mail.el (w3m-mail): Bind
	`w3m-history-reuse-history-elements' to 'reload.

2006-09-29  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* w3m-mail.el (w3m-mail-compose-with-semi): Handle types other
	than text/html as well. Decide the charset when the charset is nil
	though the content-type is a text.

2006-09-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-mail.el (w3m-mail-compose-with-mml): Treat source as binary
	data for images (we will probably have to do so for some more types);
	pass content-type argument to MML.

2006-09-28  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-mail-user-agents): Add mew-user-agent.

	* w3m-mail.el (top): Autoload w3m-mail-compose-with-mew
	(w3m-mail-user-agent-compose-function-alist): Add mew-user-agent.
	(w3m-mail-compose-with-mml): Add `content-type' argument
	(w3m-mail-compose-with-semi): Ditto.
	(w3m-mail): Handle `content-type' and `about://header/'.

	* mew-w3m.el (w3m-mail-compose-with-mew): New function.
	Add `content-type' argument and handle it.

2006-09-28  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* w3m-mail.el (w3m-mail-user-agent-compose-function-alist): Add
	wl-user-agent.
	(w3m-mail-compose-with-semi): New function.

	* w3m.el (w3m-mail-user-agents): Add wl-user-agent.

2006-09-28  Katsumi Yamaoka  <yamaoka@jpl.org>
